# rose_picker

./: .gitignore  CONTRIBUTORS.md  README.rst  pyproject.toml
.github/workflows/: checks.yaml  cla-check.yaml
lib/python/rose_ana/: mule_cumf.py
meta_data_utils/: Makefile  diag_meta_gen.py  dimension_parser.py  entities.py  field_validator.py  file_validator.py  fortran_reader.py  json_meta_data.py  rose_config_creator.py
meta_data_utils/macro/tests/: rose-app.conf
meta_data_utils/standards/: cf.py  cmip.py  standard_synonyms.py
meta_data_utils/tests/: test_cf.py  test_cmip.py  test_diag_meta_gen.py  test_dimension_parser.py  test_entities.py  test_field_validator.py  test_file_validator.py  test_fortran_reader.py  test_json_meta_data.py  test_rose_config_creator.py  test_system.py
meta_data_utils/tests/system_test_data/: system__test__meta_mod.f90  system__test_with_vlevels__meta_mod.f90  test_json_data.json  test_rose_meta.conf
meta_data_utils/tests/test_data/: bad__group_name__meta_mod.f90  bad__meta_type__meta_mod.f90  bad__section__meta_mod.f90  enum_test_file  find_nsd_test_data.f90  get_default_values_test_file  get_hard_coded_value_test_file  non_matching__file_name__meta_mod.f90  non_spatial_dimension.f90  non_spatial_dimension__invalid_attribute__meta_mod.f90  non_spatial_dimension_no_name.f90  (+7 more)
meta_data_utils/widget/: vertical_dimension_choice.py  vertical_dimension_util.py
rose_picker/: Makefile  ReadMe  rose_picker
rose_picker/tests/: __init__.py  rose_picker_test.py
source/rose_picker/: __init__.py  entry.py
tests/: rose_picker_test.py
(+12 files in other folders)
